--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,10 @@ body {
 .snapwalls-content {
     width: 100%;
 }
+.snapwalls-content-page {
+    padding: 1.5vh 2vh;
+}
+.snapwalls-content-page-home {
+    padding: 0 2vh;
+    padding-bottom: 1.5vh;
+}
