--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -174,9 +174,10 @@ Link, a {
         right: 0px;
         width: 100%;
         height: 100vh;
-        background-color: rgba(0, 0, 0, 0.584);
+        background-color: rgba(0, 0, 0, 0.812);
         display: flex;
         justify-content: flex-end;
+        z-index: 1000;
     }
     .sidebar-category {
         
@@ -237,6 +238,7 @@ Link, a {
         background-color: rgba(0, 0, 0, 0.812);
         display: flex;
         justify-content: flex-end;
+        z-index: 1000;
     }
     .sidebar-category {
         
