Fix some navbar bugs

--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -10,7 +10,7 @@ TODO remove theme dropdown menu ✅
 TODO fix logout color on hover and default color also - --seekbar ✅
 
 
-TODO remove top bottom padding below 1100px in width of navbar
+TODO remove top bottom padding below 1100px in width of navbar ✅
 */
 
 .navbar-site-name {
@@ -24,7 +24,7 @@ TODO remove top bottom padding below 1100px in width of navbar
   cursor: pointer;
 }
 .navbar-site-logo {
-  height: 50px;
+  height: 3.5em;
   border-radius: 50%;
   margin: 10px;
 }
@@ -542,7 +542,7 @@ TODO remove top bottom padding below 1100px in width of navbar
   } */
 
   .navbar-profile {
-    max-width: 38px;
+    max-width: 40px;
     height: auto;
   }
 
@@ -573,7 +573,7 @@ TODO remove top bottom padding below 1100px in width of navbar
 
   .navbar-dropdown {
     position: relative;
-    height: 41px;
+    height: 46px;
   }
 
   .navbar-dropdown-menu {
@@ -586,7 +586,7 @@ TODO remove top bottom padding below 1100px in width of navbar
   }
 
   .navbar-search-bar {
-    height: 41px;
+    height: 46px;
   }
 
   .navbar-search-icon {
@@ -608,7 +608,7 @@ TODO remove top bottom padding below 1100px in width of navbar
   }
 
   .navbar-dropbtn {
-    padding: 10px 7px;
+    padding: 12px 7px;
     padding-left: 10px;
     width: 88px;
   }
@@ -625,7 +625,7 @@ TODO remove top bottom padding below 1100px in width of navbar
   }
 }
 
-@media (min-width: 481px) and (max-width: 1024px) {
+@media (min-width: 481px) and (max-width: 599px) {
   .navbar-site-name {
     display: block;
   }
@@ -856,7 +856,7 @@ TODO remove top bottom padding below 1100px in width of navbar
 
   .navbar-dropdown {
     position: relative;
-    height: 50px;
+    height: 49px;
   }
 
   .navbar-dropbtn {
@@ -927,7 +927,13 @@ TODO remove top bottom padding below 1100px in width of navbar
   }
 }
 
-@media (min-width: 1025px) {
+/* @media (min-width: 600px) and (max-width: 700px) {
+  .navbar-dropdown {
+    padding: 10px;
+  }
+} */
+
+@media (min-width: 600px) {
   .navbar-site-name {
     display: none;
   }
@@ -1225,5 +1231,11 @@ TODO remove top bottom padding below 1100px in width of navbar
 @media (min-width: 768px) {
   .navbar-small-screen-only {
     display: none;
+  }
+}
+
+@media (max-width: 1100px) {
+  .navbar-site-name {
+    display: block;
   }
 }
