--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@ body {
   background-color: var(--background);
   color: var(--color);
   font-family: "Ubuntu", sans-serif;
+  scroll-behavior: smooth;
 }
 .snapwalls-container {
   display: flex;
@@ -21,9 +22,13 @@ body {
   width: 100%;
 }
 .snapwalls-content-page {
-    padding: 1.5vh 2vh;
+  padding: 1.5vh 2vh;
 }
 .snapwalls-content-page-home {
-    padding: 0 2vh;
-    padding-bottom: 1.5vh;
+  padding: 0 2vh;
+  padding-bottom: 1.5vh;
+}
+
+.navbar-nav {
+  padding: 10px;
 }
