--- a/app/styles/carousel.css
+++ b/app/styles/carousel.css
@@ -4,7 +4,8 @@
   height: 350px;
   overflow: hidden;
   box-sizing: border-box;
-  padding: 1.5vh;
+  padding: 0 7px;
+  padding-bottom: 10px;
 }
 
 .slider {
@@ -34,7 +35,7 @@
 
 .dots {
   position: absolute;
-  bottom: 15px;
+  bottom: 20px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -56,6 +57,13 @@
 }
 
 /* Responsive styling for tablets */
+@media screen and (max-width: 1100px) {
+  .slider-container {
+    padding: 0;
+    padding: 0 7px;
+    padding-bottom: 10px;
+  }
+}
 @media (max-width: 1024px) {
   .slider-container {
     height: 300px;
@@ -72,10 +80,9 @@
 }
 
 /* Mobile responsiveness */
-@media (max-width: 768px) {
+@media (max-width: 600px) {
   .slider-container {
     height: 250px;
-    padding: 1vh;
 
     .dot {
       width: 6px;
@@ -96,7 +103,6 @@
 @media (max-width: 480px) {
   .slider-container {
     height: 200px;
-    padding: 0.8vh;
   }
 
   .dot {
