--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -3,9 +3,9 @@
     height: 97vh;
     background-color: var(--foreground);
     box-sizing: border-box;
-    margin: 1.5vh 0;
-    margin-left: 1.5vh;
-    border-radius: 30px;
+    margin: 10px 0;
+    margin-left: 10px;
+    border-radius: 20px;
     padding: 20px 0;
     padding-left: 20px;
     display: flex;
