--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -280,19 +280,19 @@ Link, a {
     
     .sidebar {
         position: fixed;
-        bottom: 7px;
+        bottom: 13px;
         width: 100%;
-        height: 70px;
+        height: fit-content;
         z-index: 2;
     }
     .sidebar-container {
-        max-width: 340px;
-        min-width: 310px;
+        max-width: 300px;
+        min-width: 290px;
         width: 97%;
         display: flex;
         justify-content: center;
         margin: auto;
-        height: 70px;
+        height: 68px;
         border-radius: 40px;
         padding: 0;
     }
@@ -309,8 +309,8 @@ Link, a {
         padding: 0 10px;
     }
     .sidebar-nav-icons {
-        width: 40px;
-        height: 40px;
+        width: 38px;
+        height: 38px;
     }
 
     .active-nav-last {
