--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -1,18 +1,26 @@
+.sidebar {
+    position: sticky;
+    top: 10px;
+    height: calc(100vh - 20px);
+    z-index: 5;
+    width: fit-content;
+}
+
 .sidebar-container {
+    height: 100%;
     min-width: 280px;
-    height: 97vh;
     background-color: var(--foreground);
     box-sizing: border-box;
-    margin: 10px 0;
-    margin-left: 10px;
+    margin: 0 0 0 10px;
     border-radius: 20px;
     padding: 20px 0;
     padding-left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden;
+    overflow-y: auto;
 }
+
 Link, a {
     text-decoration: none;
     color: var(--text-color);
@@ -155,6 +163,7 @@ Link, a {
 }
 
 
+
 @media screen and (max-height: 670px) {
     .sidebar-category {
         display: none;
@@ -280,21 +289,24 @@ Link, a {
     
     .sidebar {
         position: fixed;
+        top: auto;
         bottom: 13px;
+        left: 0;
+        right: 0;
+        height: auto;
         width: 100%;
-        height: fit-content;
-        z-index: 2;
     }
+
     .sidebar-container {
         max-width: 300px;
         min-width: 290px;
         width: 97%;
-        display: flex;
-        justify-content: center;
-        margin: auto;
         height: 68px;
+        margin: auto;
         border-radius: 40px;
         padding: 0;
+        overflow-y: visible;
+        justify-content: center;
     }
     
     .sidebar-nav {
