--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -137,7 +137,7 @@ Link, a {
     border-radius: 10px;
     margin: 10px 0;
     overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: none;
     min-height: 60px;
 }
 .sidebar-category-items:hover {
