--- a/app/styles/wallpaper.css
+++ b/app/styles/wallpaper.css
@@ -1,13 +1,62 @@
 .wallpaper-container {
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
     justify-content: center;
-}
-.wallpaper-image {
-    height: 400px;
+  }
+  
+  .wallpaper-item {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .wallpaper-image {
+    display: block;
     width: 200px;
+    height: 400px;
     object-fit: cover;
     border-radius: 5px;
-}
+    transition: transform 0.3s ease;
+  }
+  
+  .wallpaper-item:hover .wallpaper-image {
+    transform: scale(1.05);
+  }
+  
+  .download-icon {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    opacity: 0;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+  }
+  
+  .wallpaper-item:hover .download-icon {
+    opacity: 1;
+  }
+  
+  .download-icon {
+    bottom: 10px;
+    right: 10px;
+  }
+  
+  .download-icon svg {
+    width: 100%;
+    height: 100%;
+    filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));
+    transition: transform 0.3s ease, color 0.3s ease;
+  }
+  
+  .download-icon:hover svg {
+    transform: scale(1.1);
+  }
+  
+  .download-icon svg {
+    color: #efefef;
+    stroke-width: 2;
+  }
+  
+  .download-icon:hover svg {
+    color: #ffffff;
+  }
