--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,27 @@ body {
   padding-bottom: 10px;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1a1a1a;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #00cc7d;
+  border-radius: 10px;
+  border: 2px solid #1a1a1a;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #008f61;
+}
+
+
 @media screen and (max-width: 1100px) {
   .snapwalls-content {
     padding: 0;
