--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -335,6 +335,20 @@
   font-size: 1.5em; /* Adjust size as needed */
 }
 
+
+.navbar-signup-button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: white;
+  border-radius: 4px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.navbar-signup-button:hover {
+  background-color: #0056b3;
+}
+
 @media (max-width: 1100px) {
   .navbar-site-name {
     display: flex;
@@ -1249,3 +1263,8 @@
     color: white;
   }
 }
+
+
+
+
+
