--- a/app/styles/navbar.css
+++ b/app/styles/navbar.css
@@ -300,7 +300,6 @@
   font-size: 1.2em;
   font-weight: 500;
   font-size: 1.2em;
-  text-transform: uppercase;
 }
 
 .navbar-search-container {
@@ -317,6 +316,7 @@
   padding-left: 50px; /* Increased padding to create more space */
   padding-right: 20px;
   color: white;
+  font-size: 1em;
 }
 
 .navbar-search-icon-container {
@@ -365,9 +365,8 @@
 }
 
 .navbar-signup-button:hover {
-  background-color: #27ae60 ;
+  background-color: #27ae60;
   color: white;
-  
 }
 
 .navbar-login-button:focus,
@@ -378,6 +377,36 @@
 .navbar-login-button:active,
 .navbar-signup-button:active {
   box-shadow: none;
+}
+
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+  .navbar-signup-button,
+  .navbar-login-button {
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .navbar-signup-button,
+  .navbar-login-button {
+    padding: 6px 12px;
+    font-size: 12px;
+  }
+  
+  .navbar-signup-button:hover,
+  .navbar-login-button:hover {
+    transform: translateY(-1px);
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .navbar-signup-button,
+  .navbar-login-button {
+    padding: 5px 10px;
+    font-size: 11px;
+  }
 }
 
 
@@ -639,7 +668,6 @@
   } */
 
   .navbar-search-bar {
-    font-size: 1em;
     border-radius: 54px;
     height: 56px;
   }
